Fix large nav scrolling bug on smaller screens

--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -41,15 +41,15 @@ body {
 
   .nav-wrapper {
     width: 100%;
+    height: 100%;
     overscroll-behavior: none;
+  }
 
-    &.nav-wrapper-1 {
-      position: static;
-      height: 100%;
-      overflow: scroll;
-      overflow-x: visible;
-      overflow-y: auto;
-    }
+  .nav-content {
+    height: 100%;
+    overflow: scroll;
+    overflow-x: visible;
+    overflow-y: auto;
   }
 
   ul {
@@ -168,13 +168,6 @@ body {
         height: 100%;
         visibility: hidden;
         transition: visibility 0s ease $hc-offcanvas-nav-transition-duration, transform $hc-offcanvas-nav-transition-duration $hc-offcanvas-nav-transition-timing-function;
-      }
-
-      ul {
-        height: 100%;
-        overflow: scroll;
-        overflow-x: visible;
-        overflow-y: auto;
       }
 
       li {
